criando jquery, mask, os stimulus admin_modal e modal, ajustando index.js, e criando html footer nav user_signed

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<header class="bg-dark py-5">
+  <div class="container px-4 px-lg-5 my-5">
+    <div class="text-center text-white">
+      <h1 class="display-4 fw-bolder">Sua loja virtual preferida</h1>
+      <p class="lead fw-normal text-white-50 mb-0">Aqui vai ser o slogan</p>
+    </div>
+  </div>
+</header>
+<section class="py-5">
+  <div class="container px-4 px-lg-5 mt-5">
+    <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+      <div class="col mb-5">
+        <div class="card h-100">
+          <h1>TESTE</h1>
+        </div>
+        <div class="card h-100">
+          <h1>TESTE</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
