--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,38 @@
 <h2>Sign up</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
+<%= simple_form_for(resource, html: { class: 'login-form' }, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <div class="text-center">
+    <%= f.error_notification %>
+    <%= render "devise/shared/error_messages" %>
+  </div>
   <div class="form-inputs">
+    <%= f.input :name,
+                required: true,
+                autofocus: true,
+                label: false, #tira nome "email",
+                placeholder: 'Nome'%>
+    <%= f.input :phone,
+                input_html: { class: "mask-phone" },
+                required: true,
+                autofocus: true,
+                label: false, #tira nome "email",
+                placeholder: 'Telefone'%>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
+                label: false, #tira nome "email",
+                placeholder: 'E-mail',
                 input_html: { autocomplete: "email" }%>
     <%= f.input :password,
                 required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                label: false, #tira nome "email",
+                placeholder: 'senha no mínimo 6 caracteres',
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
                 required: true,
+                label: false, #tira nome "email",
+                placeholder: 'Confirmar senha',
                 input_html: { autocomplete: "new-password" } %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
+  <%= render "devise/shared/button_submit", f: f, text: 'Cadastrar' %>
 <% end %>
-
 <%= render "devise/shared/links" %>
