modificando edit, new devise

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,4 +35,8 @@
   </div>
   <%= render "devise/shared/button_submit", f: f, text: 'Cadastrar' %>
 <% end %>
-<%= render "devise/shared/links" %>
+<div class="form-group d-md-flex">
+  <div class="w-100 text-md-right">
+    <%= render "devise/shared/links" %>
+  </div>
+</div>
