--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,2 +1,29 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
+
+.menu-item-profile {
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.menu-item-profile li:hover {
+  background-color: #d3d3d3;
+}
+
+.input_image_full {
+  width: 100%;
+}
+
+.edit-img {
+  display: flex;
+  width: 80px;
+  height: 80px;
+}
+
+.img-user {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 1px solid #0000002e;
+}
