--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_include_tag "devise",  "data-turbo-track": "reload", defer: true %>
   </head>
   <body>
-    <section class="ftco-section">
+    <section class="ftco-section p-3">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-6 text-center mb-5">
@@ -26,7 +26,7 @@
               </div>
               <h3 class="text-center mb-4">Login</h3>
               <%= render 'layouts/shared/flash' if flash.present? %>
-              <%= yield %> <%# aqui ele chamaa qualquer pasta que tiver "devise vai depender se estiver em passwords, session etc"  app/views/devise/ - %>
+              <%= yield %>
             </div>
           </div>
         </div>
