criando base_controller, home_controller para admim, e algumas views

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -23,7 +23,7 @@
         <%= render 'layouts/admin/footer'%>
       </div>
     </div>
-    <%= turbo_frame_tag "bootstrap_modal" %>
+    <%# <%= turbo_frame_tag "bootstrap_modal" %> <%# tem isso depois usando Stimulus com turbo %>
     <a class="scroll-to-top rounded" href="#page-top">
       <i class="fas fa-angle-up"></i>
     </a>
