--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -13,13 +13,13 @@
   </li>
   <hr class="sidebar-divider">
   <li class="nav-item">
-    <a class="nav-link" href="<%= admin_categories_path %>">
+    <a class="nav-link" href="#<%# admin_categories_path %>">
       <i class="fa-regular fa-bookmark"></i>
       <span>Categorias</span>
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="<%= admin_products_path %>">
+    <a class="nav-link" href="#<%# admin_products_path %>">
       <i class="fa-brands fa-product-hunt"></i>
       <span>Produtos</span>
     </a>
