--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -13,9 +13,9 @@
   </li>
   <hr class="sidebar-divider">
   <li class="nav-item">
-    <a class="nav-link" href="#<%# admin_categories_path %>">
+    <a class="nav-link" href="<%= admin_movies_path %>">
       <i class="fa-regular fa-bookmark"></i>
-      <span>Categorias</span>
+      <span>Movies</span>
     </a>
   </li>
   <li class="nav-item">
