criando scaffold region with the crud

--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -19,9 +19,9 @@
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#<%# admin_products_path %>">
+    <a class="nav-link" href="<%= admin_regions_path %>">
       <i class="fa-brands fa-product-hunt"></i>
-      <span>Produtos</span>
+      <span>Regions</span>
     </a>
   </li>
   <li class="nav-item">
