--- a/app/views/admin/regions/edit.html.erb
+++ b/app/views/admin/regions/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing region</h1>
-
-<%= render "form", region: @region %>
-
-<br>
-
-<div>
-  <%= link_to "Show this region", @region %> |
-  <%= link_to "Back to regions", regions_path %>
+<h1 class="h3 mb-4 text-gray-800">Editing region</h1>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="card shadow mb-4">
+      <div class="card-body">
+        <%= render "form", region: @region %>
+      </div>
+    </div>
+  </div>
 </div>
