algumas modificação criando turbo movie_theaters

--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -25,7 +25,7 @@
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="<%= admin_regions_path %>">
+    <a class="nav-link" href="<%= admin_movie_theaters_path %>">
       <i class="fa-brands fa-product-hunt"></i>
       <span>MovieTheaters</span>
     </a>
