--- a/app/views/admin/movie_theaters/index.html.erb
+++ b/app/views/admin/movie_theaters/index.html.erb
@@ -1,14 +1,32 @@
 <p style="color: green"><%= notice %></p>
-
-<h1>Movie theaters</h1>
-
-<div id="movie_theaters">
-  <% @movie_theaters.each do |movie_theater| %>
-    <%= render movie_theater %>
-    <p>
-      <%= link_to "Show this movie theater", movie_theater %>
-    </p>
-  <% end %>
+<h1 class="h3 mb-4 text-gray-800">Categories</h1>
+<div class="row">
+  <div class="col-lg-12">
+    <!-- Circle Buttons -->
+    <div class="card shadow mb-4">
+      <div class="card-body">
+        <table class="table table-striped">
+          <thead>
+            <th>Movie_Id</th>
+            <th>Region_Id</th>
+            <th>Ações</th>
+          </thead>
+          <tbody>
+            <%@movie_theaters.each do | mt | %>
+              <tr>
+                <td><%= mt.state %></td>
+                <td><%= mt.city %></td>
+                <td>
+                  <%= link_to "Details", admin_movie_theaters_path(mt), class: 'btn btn-primary' %>
+                  <%= link_to "Edit", edit_admin_movie_theater_path(mt), "data-controller": "admin-modal", class: 'btn btn-secondary' %>
+                  <%= link_to "Delete", admin_movie_theaters_path(mt), class: 'btn btn-danger', method: :delete,  data: { turbo_method: :delete, turbo_confirm: 'Deseja realmente excluir?' } %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+        <%= link_to "New movie", new_admin_movie_theater_path, "data-controller": "admin-modal", class: 'btn btn-primary' %>
+      </div>
+    </div>
+  </div>
 </div>
-
-<%= link_to "New movie theater", new_movie_theater_path %>
