--- a/app/views/admin/movie_theaters/new.html.erb
+++ b/app/views/admin/movie_theaters/new.html.erb
@@ -1,9 +1,10 @@
-<h1>New movie theater</h1>
-
-<%= render "form", movie_theater: @movie_theater %>
-
-<br>
-
-<div>
-  <%= link_to "Back to movie theaters", movie_theaters_path %>
+<h1 class="h3 mb-4 text-gray-800">New Region</h1>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="card shadow mb-4">
+      <div class="card-body">
+        <%= render "form", movie_theater: @movie_theater %>
+      </div>
+    </div>
+  </div>
 </div>
