--- a/app/views/admin/regions/new.html.erb
+++ b/app/views/admin/regions/new.html.erb
@@ -3,7 +3,7 @@
   <div class="col-lg-12">
     <div class="card shadow mb-4">
       <div class="card-body">
-        <%= render "form", movie: @region %>
+        <%= render "form", region: @region %>
       </div>
     </div>
   </div>
