--- a/app/views/admin/regions/new.turbo_stream.erb
+++ b/app/views/admin/regions/new.turbo_stream.erb
@@ -1,3 +1,3 @@
 <%= turbo_stream.replace "bootstrap_modal" do %>
-  <%= render partial: "admin/regions/form_modal", locals: { movie: @movie } %>
+  <%= render partial: "admin/regions/form_modal", locals: { region: @region } %>
 <% end %>
