--- a/app/views/admin/movie_theaters/_form_modal.html.erb
+++ b/app/views/admin/movie_theaters/_form_modal.html.erb
@@ -3,7 +3,7 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Create Movie_Theater</h5>
           <button 
         type="button" 
         class="btn-close" 
@@ -15,7 +15,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <%= render "admin/movie_theaters/form", movie: @movie_theater %>
+          <%= render "admin/movie_theaters/form", movie_theater: @movie_theater %>
         </div>
       </div>
     </div>
