--- a/app/views/admin/movie_theaters/new.html.erb
+++ b/app/views/admin/movie_theaters/new.html.erb
@@ -1,4 +1,4 @@
-<h1 class="h3 mb-4 text-gray-800">New Region</h1>
+<h1 class="h3 mb-4 text-gray-800">New Movie_theater</h1>
 <div class="row">
   <div class="col-lg-12">
     <div class="card shadow mb-4">
