--- a/app/views/admin/movie_theaters/_form.html.erb
+++ b/app/views/admin/movie_theaters/_form.html.erb
@@ -2,8 +2,8 @@
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
   <div class="form-inputs">
-    <%= f.input :movie_id %>
-    <%= f.input :region_id %>
+    <%= f.input :movie_id, label: 'Movie_Id' %>
+    <%= f.input :region_id, label: 'Region_Id' %>
   </div>
   <div class="form-actions">
     <%= f.button :submit, 'Salvar', class: 'btn btn-info' %>
