--- a/app/views/admin/movie_theaters/edit.html.erb
+++ b/app/views/admin/movie_theaters/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing movie theater</h1>
-
-<%= render "form", movie_theater: @movie_theater %>
-
-<br>
-
-<div>
-  <%= link_to "Show this movie theater", @movie_theater %> |
-  <%= link_to "Back to movie theaters", movie_theaters_path %>
+<h1 class="h3 mb-4 text-gray-800">Editing movie_theater</h1>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="card shadow mb-4">
+      <div class="card-body">
+        <%= render "form", movie_theater: @movie_theater %>
+      </div>
+    </div>
+  </div>
 </div>
