--- a/app/views/admin/movie_theaters/_form.html.erb
+++ b/app/views/admin/movie_theaters/_form.html.erb
@@ -1,9 +1,8 @@
 <%= simple_form_for([:admin, @movie_theater]) do |f| %> <%# esse ':admin' com [] diz que ele é do namespace admin, assim 'admin_categories' %>
-  <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
   <div class="form-inputs">
-    <%= f.input :movie_id, label: 'Movie_Id' %>
-    <%= f.input :region_id, label: 'Region_Id' %>
+    <%= f.input :movie, label: 'Movie Name' %>
+    <%= f.input :city, label: 'City Name' %>
   </div>
   <div class="form-actions">
     <%= f.button :submit, 'Salvar', class: 'btn btn-info' %>
