algumas alteração na criação movie_theaters

--- a/app/views/admin/movie_theaters/_form_modal.html.erb
+++ b/app/views/admin/movie_theaters/_form_modal.html.erb
@@ -15,7 +15,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <%= render "admin/movie_theaters/form", movie_theater: @movie_theater %>
+          <%= render "admin/movie_theaters/form" %>
         </div>
       </div>
     </div>
