--- a/app/views/admin/movie_theaters/new.html.erb
+++ b/app/views/admin/movie_theaters/new.html.erb
@@ -3,7 +3,7 @@
   <div class="col-lg-12">
     <div class="card shadow mb-4">
       <div class="card-body">
-        <%= render "form", movie_theater: @movie_theater %>
+        <%= render "form" %>
       </div>
     </div>
   </div>
