--- a/app/views/admin/movie_theaters/new.turbo_stream.erb
+++ b/app/views/admin/movie_theaters/new.turbo_stream.erb
@@ -1,3 +1,3 @@
 <%= turbo_stream.replace "bootstrap_modal" do %>
-  <%= render partial: "admin/movie_theaters/form_modal", locals: { movie_theater: @movie_theater } %>
+  <%= render partial: "admin/movie_theaters/form_modal" %>
 <% end %>
