--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,16 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+      /* Oculta os botões de navegação quando o slide ativo é o primeiro ou o último */
+      .hide-prev {
+        visibility: hidden;
+      }
+      .hide-next {
+        visibility: hidden;
+      }
+    </style>
   </head>
   <body>
     <%= render 'layouts/store/nav' %>
