--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,40 +7,31 @@
   </div>
 </header>
 <section class="py-5">
-  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div id="carouselExampleControls" class="carousel slide">
     <div class="carousel-inner">
-      <!-- Slide 1 -->
-      <div class="carousel-item active">
-        <img src="https://via.placeholder.com/800x400" class="d-block w-100" alt="Slide 1">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+      <% @movies.each_slice(6).with_index do |movies_chunk, chunk_index| %>
+        <div class="carousel-item <%= chunk_index.zero? ? 'active' : '' %>">
+          <div class="row ms-2 me-2">
+            <% movies_chunk.each do |movie| %>
+              <div class="col-md-2">
+                <div class="card">
+                  <%= image_tag movie.image_main, class: "card-img-top", alt: movie.title %>
+                </div>
+                <div class="custom-card-body">
+                  <h5><%= movie.title %></h5>
+                </div>
+              </div>
+            <% end %>
+          </div>
         </div>
-      </div>
-      <!-- Slide 2 -->
-      <div class="carousel-item">
-        <img src="https://via.placeholder.com/800x400" class="d-block w-100" alt="Slide 2">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
-        </div>
-      </div>
-      <!-- Slide 3 -->
-      <div class="carousel-item">
-        <img src="https://via.placeholder.com/800x400" class="d-block w-100" alt="Slide 3">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
-      </div>
+      <% end %>
     </div>
-    <!-- Botões de controle -->
     <button class="carousel-control-prev hide-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="carousel-control-prev-icon custom-button" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="carousel-control-next-icon custom-button" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
   </div>
