--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,33 +6,34 @@
     </div>
   </div>
 </header>
-<section class="py-5">
+<section class="py-5 section-custom">
   <div id="carouselExampleControls" class="carousel slide">
     <div class="carousel-inner">
-      <% @movies.each_slice(6).with_index do |movies_chunk, chunk_index| %>
-        <div class="carousel-item <%= chunk_index.zero? ? 'active' : '' %>">
-          <div class="row ms-2 me-2">
-            <% movies_chunk.each do |movie| %>
-              <div class="col-md-2">
-                <div class="card">
-                  <%= image_tag movie.image_main, class: "card-img-top", alt: movie.title %>
-                </div>
-                <div class="custom-card-body">
-                  <h5><%= movie.title %></h5>
-                </div>
+      <div class="carousel-item active">
+        <div class="ms-2 me-2 carousel-custom">
+          <% @movies.each do |movie| %>
+            <div class="col-custom">
+              <div class="card card-movie">
+                <%= image_tag movie.image_main, class: "movie-image", alt: movie.title %>
               </div>
-            <% end %>
-          </div>
+              <div class="custom-card-body">
+              </div>
+            </div>
+          <% end %>
         </div>
-      <% end %>
+      </div>
     </div>
-    <button class="carousel-control-prev hide-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon custom-button" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-      <span class="carousel-control-next-icon custom-button" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
   </div>
+  <%# <button class="carousel-control-prev hide-prev button-custom-previous" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+  </button> %>
+  <div class="container-arrow-left" >
+    <i class="fa-solid fa-angle-left i-arrow-custom-left"></i>
+    <span class="visually-hidden">Previous</span>
+  </div>
+  <div class="container-arrow-right" >
+    <i class="fa-solid fa-angle-right i-arrow-custom-right"></i>
+    <span class="visually-hidden">Next</span>
+  </div>
+  <%# <button class="carousel-control-next button-custom-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+  </button> %>
 </section>
