--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
   </head>
   <body>
     <%= render 'layouts/store/nav' %>
+    <%= render 'layouts/store/dashboard' %>
     <%= yield %>
     <%= render 'layouts/store/footer' %>
   </body>
