--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -11,19 +11,12 @@
     <%= javascript_include_tag "devise",  "data-turbo-track": "reload", defer: true %>
   </head>
   <body>
-    <section class="ftco-section p-3">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-6 text-center mb-5">
-            <h2 class="heading-section"><%= link_to "Ecommerce Showzim", root_path %></h2>
-          </div>
-        </div>
+    <section class="">
+      <div class="">
+        <%= render 'layouts/devise/ingresso_top' %>
         <div class="row justify-content-center">
           <div class="col-md-7 col-lg-5">
             <div class="login-wrap p-4 p-md-5">
-              <div class="icon d-flex align-items-center justify-content-center">
-                <span class="fa fa-user-o"></span>
-              </div>
               <h3 class="text-center mb-4">Login</h3>
               <%= render 'layouts/shared/flash' if flash.present? %>
               <%= yield %>
