criado footer ingresso

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -1,2 +1,8 @@
 @import 'devise/style.css';
 @import 'devise/ingresso_top.css';
+@import 'devise/footer_address.css';
+
+.container-main {
+  display: flex;
+  flex-direction: column;
+}
