--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -11,10 +11,10 @@
     <%= javascript_include_tag "devise",  "data-turbo-track": "reload", defer: true %>
   </head>
   <body>
-    <section class="">
-      <div class="">
-        <%= render 'layouts/devise/ingresso_top' %>
-        <div class="row justify-content-center">
+    <div class="container-main">
+      <%= render 'layouts/devise/ingresso_top' %>
+      <section>
+        <div class="row justify-content-center mr-0 ml-0">
           <div class="col-md-7 col-lg-5">
             <div class="login-wrap p-4 p-md-5">
               <h3 class="text-center mb-4">Login</h3>
@@ -23,8 +23,9 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+      <%= render 'layouts/devise/footer_address' %>
+    </div>
     <%# <%= yield %> <%# esse yield parece ser a a propria view que vai carrgar aqui, e qualque coisa que eu colocar em volta dela vai carregar em todos %>
   </body>
 </html>
