--- a/app/assets/stylesheets/devise/footer_address.css
+++ b/app/assets/stylesheets/devise/footer_address.css
@@ -3,8 +3,10 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-
   font-size: 11px;
+  border-top: 1px solid #afafaf;
+  width: 80%;
+  padding-top: 10px;
 }
 
 .address-footer {
