--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -13,18 +13,13 @@
   <body>
     <div class="container-main">
       <%= render 'layouts/devise/ingresso_top' %>
-      <%# <div class="container-top-footer">
-
-      </div> %>
       <section>
         <div class="row justify-content-center mr-0 ml-0">
-          <div class="col-md-7 col-lg-5 container-login-create">
-            <div class="login-wrap d-flex p-4 p-md-5">
-              <%= render 'layouts/shared/flash' if flash.present? %>
-              <%= yield %>
-              <div class="">
-                <h1>Criar nova conta</h1>
-              </div>
+          <div class="d-flex container-login-create">
+            <%= render 'layouts/shared/flash' if flash.present? %>
+            <%= yield %>
+            <div class="">
+              <h1>Criar nova conta</h1>
             </div>
           </div>
         </div>
