criado create_new_html css dele

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -3,6 +3,7 @@
 @import 'devise/footer_address.css';
 @import 'devise/new.css';
 @import 'devise/button_submit.css';
+@import 'devise/create_new_count.css';
 
 .container-main {
   display: flex;
